2013-08-09 Alex Tutubalin <lexa@lexa.ru>
  * Disabled RawSpeed's bad pixel processing

2013-08-08 Alex Tutubalin <lexa@lexa.ru>
  * OpenMP AHD code backported from 0.15 branch
  * LibRaw::setCancelFlag() for fast decoder termination

2013-08-07 Alex Tutubalin <lexa@lexa.ru>
  * New camera/format support:
     Blackmagic Cinema
     Richon GR
     Panasonic LF1
     Fujifilm X-M1
     Canon EOS 70D
     Sony RX100II, RX1R
     Olympus E-P5

2013-07-08 Alex Tutubalin <lexa@lexa.ru>
    * imgdata.params.sraw_ycc

2013-07-03 Alex Tutubalin <lexa@lexa.ru>
  * Imported dcraw 9.19/1.456
    + Support for new cameras:
      Baumer TXG14
      Canon EOS C500
      Nikon D5200
      OmniVision OV5647 (Raspberry Pi)
      Panasonic DMC-GF6
      Samsung NX300, NX1100, NX2000
      Sony NEX-3N
    + New interpolation code for Fuji X-Trans sensor
    + imgdata.iparams.filters value is now 9 for Fuji X-Trans (instead of 2)
  * New imgdata.iparams.xtrans[6][6] matrix contains row/col to color mapping
    for Fuji X-Trans sensor.
  * Removed OpenMP speedup for AHD interpolation (to be returned later)
  * Removed faster lossless jpeg decoder ported from RawSpeed library
    some years ago. Build LibRaw with RawSpeed to get fast decoding.
  * Removed make_byte_buffer() call from LibRaw*datastream interface.
  * Fixed decoding error for some Canon sRAW files.
  * Updated RawSpeed supported camera list

2013-05-27 Alex Tutubalin <lexa@lexa.ru>
  * New demosaic code: DHT Demosaic by Anton Petrusevich
    Set params.user_qual=11 to use.
  * New demosaic code: Modified AHD Demosaic by Anton Petrusevich
    Set params.user_qual=12 to use.
  * New C-API call libraw_COLOR(libraw_data_t *t, int row,int col)
    LibRaw::COLOR(row,col) exosed to C-API users.

  * New output tuning parameter params.no_auto_scale
    Set it to non-zero to disable call to scale_colors() in dcraw_process()

2013-05-23 Alex Tutubalin <lexa@lexa.ru>

 LibRaw 0.15-Release
 
 New camera/format support: