@@ -1,3 +1,7 @@
+2013-08-23 Alex Tutubalin <lexa@lexa.ru>
+  * EOS M and EOS 70D added to unique ID table
+  * Canon EOS model name normalized by unique ID table
+
 2013-08-09 Alex Tutubalin <lexa@lexa.ru>
   * Disabled RawSpeed's bad pixel processing
 
